--- a/styles/style.css
+++ b/styles/style.css
@@ -302,7 +302,6 @@ span {
     opacity: 60%;
 }
 
-
 /* @media only screen and (max-width: 700px) {
     * {
         margin: 0;
@@ -330,7 +329,7 @@ span {
 } */
 
 
-@media only screen and (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
     .proj-img {
         width: 500px;
     }
