--- a/styles/style.css
+++ b/styles/style.css
@@ -302,6 +302,13 @@ span {
     opacity: 60%;
 }
 
+.tube-watch {
+     /* border: 2px solid red; */
+     display: flex;
+     align-items: left;
+     padding-left: 13px;
+}
+
 /* @media only screen and (max-width: 700px) {
     * {
         margin: 0;
