--- a/styles/style.css
+++ b/styles/style.css
@@ -307,6 +307,7 @@ span {
      display: flex;
      align-items: left;
      padding-left: 13px;
+     text-decoration: underline;
 }
 
 /* @media only screen and (max-width: 700px) {
