--- a/styles/style.css
+++ b/styles/style.css
@@ -486,8 +486,8 @@ span {
 
     .dashed-line {
         border-top: 3px dotted #4da62f;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
 
     .content-dashed-line {
@@ -556,5 +556,28 @@ span {
         /* border: 2px solid red; */
         font-size: 12px;
         margin: 0;
+    }
+
+    #image-content {
+        /* border: .5px solid rgb(255, 0, 0); */
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        padding: 20px;
+    }
+
+    .desc {
+        /* border: 1px solid red; */
+        margin-top: -40px;
+        font-size: 12px;
+        line-height: 20x;
+    }
+
+    .desc-mix {
+        /* border: 1px solid red; */
+        margin-top: -40px;
+        margin-bottom: 35px;
+        font-size: 12px;
+        line-height: 20x;
     }
 }
