--- a/styles/style.css
+++ b/styles/style.css
@@ -4,12 +4,10 @@
 }
 
 html {
-    /* border: 1px solid red; */
     background: #050505;
 }
 
 #banner {
-    /* border: 1px solid red; */
     background: #5CAB46;
     height: 1.8rem;
     overflow: hidden;
@@ -25,7 +23,6 @@ html {
 }
 
 #nav-icon {
-    /* border: 1px solid red; */
     display: none;
     position: fixed;
     top: 20px;
@@ -48,7 +45,6 @@ html {
 }
 
 #nav-section {
-    /* border: .5px solid rgb(0, 13, 255); */
     width: 19rem;
     float: right;
     padding: 20px;
@@ -64,7 +60,6 @@ html {
 }
 
 .name {
-    /* border: 1px solid red; */
     margin: 0;
     padding: 0;
     font-size: 12px;
@@ -78,13 +73,11 @@ html {
 
 .dashed-line {
     border-top: 3px dotted #4da62f;
-    /* border: 1px solid red; */
     margin-top: 20px;
     margin-bottom: 20px;
 }
 
 .subheadings {
-    /* border: 1px solid red; */
     margin: 0;
     padding: 0;
     font-size: 12px;
@@ -94,7 +87,6 @@ html {
 }
 
 .about {
-    /* border: 1px solid red; */
     margin: 0;
     padding: 0;
     text-indent: 25px;
@@ -106,14 +98,13 @@ html {
     padding: 0;
 }
 
-.desc {
-    /* border: 1px solid red; */
+.desc,
+.desc-mix {
     font-size: 12px;
     line-height: 20px;
 }
 
 #nav-menu {
-    /* border: 1px solid red; */
     margin: 0;
     padding: 0;
     display: flex;
@@ -122,13 +113,11 @@ html {
 
 
 .social-menu {
-    /* border: 1px solid red; */
     margin-top: 30px;
     line-height: 20px;
 }
 
 .link {
-    /* border: 1px solid red; */
     text-decoration: none;
     list-style-type: none;
     padding-left: 4px;
@@ -146,20 +135,17 @@ html {
 }
 
 .full-menu {
-    /* border: 1px solid red; */
     margin: 0;
     padding: 0;
     display: inline-block;
 }
 
 .arrow {
-    /* border: 1px solid red; */
     width: 13px;
     padding: 0;
 }
 
 .content-menu {
-    /* border: 1px solid red; */
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -188,19 +174,16 @@ a:hover {
 }
 
 #content-top {
-    /* border: 1px solid red; */
     margin-right: 345px;
     padding-top: 20px;
 }
 
 #image-content {
-    /* border: 1px solid red; */
     margin-right: 345px;
     padding-top: 20px;
 }
 
 .content-heading {
-    /* border: 1px solid red; */
     font-size: 12px;
     line-height: 2.75rem;
     letter-spacing: .1rem;
@@ -219,7 +202,6 @@ a:hover {
 }
 
 #content {
-    /* border: 1px solid red; */
     display: flex;
     padding: 38px 0 50px 0;
     flex-direction: column;
@@ -227,20 +209,17 @@ a:hover {
 }
 
 .mid-menu {
-    /* border: 1px solid red; */
     display: flex;
     flex-direction: row;
 }
 
 .vid-menu-one,
 .vid-menu-two {
-    /* border: 1px solid red; */
     text-transform: uppercase;
     letter-spacing: .08rem;
 }
 
 #visualizers {
-    /* border: 2px solid red; */
     flex-shrink: 0;
     margin: 0;
     padding: 0;
@@ -250,7 +229,6 @@ a:hover {
 }
 
 .projects {
-    /* border: 2px solid red; */
     margin: 0;
     padding: 0;
     display: flex;
@@ -258,7 +236,6 @@ a:hover {
 }
 
 .proj-img {
-    /* border: 2px solid red; */
     flex-shrink: 0;
     margin-left: -20px;
     width: 390px;
@@ -267,7 +244,6 @@ a:hover {
 }
 
 .proj-title {
-    /* border: 2px solid red; */
     color: #4DA62F;
     font-size: 25px;
     font-family: Dela Gothic One;
@@ -279,7 +255,6 @@ a:hover {
 }
 
 .title-container {
-    /* border: 2px solid red; */
     padding: 0;
     margin-left: -20px;
     display: flex;
@@ -288,13 +263,11 @@ a:hover {
 }
 
 .sub-desc {
-    /* border: 2px solid red; */
     font-size: 12px;
     padding-top: 6px;
 }
 
 .proj-desc {
-    /* border: 2px solid red; */
     font-size: 12px;
     margin-right: -30px;
 }
@@ -305,7 +278,6 @@ span {
 }
 
 .landing {
-    /* border: 2px solid red; */
     margin: 0;
     padding: 0;
     display: flex;
@@ -314,12 +286,10 @@ span {
 }
 
 .landing-img {
-    /* border: 2px solid red; */
     width: 65%;
 }
 
 #mixes {
-    /* border: 2px solid red; */
     margin: 0;
     padding: 0;
     display: flex;
@@ -334,7 +304,6 @@ span {
 }
 
 .mix-pack {
-    /* border: 2px solid red; */
     margin: 0;
     padding: 0;
     max-width: 100%;
@@ -349,7 +318,6 @@ span {
 }
 
 .tube-watch {
-    /* border: 2px solid red; */
     display: flex;
     align-items: left;
     margin-top: 10px;
@@ -372,7 +340,6 @@ span {
 @media only screen and (max-width: 1400px) {
 
     .mix-pack {
-        /* border: 2px solid red; */
         margin: 0;
         padding: 0;
         display: flex;
@@ -401,7 +368,6 @@ span {
 @media only screen and (max-width: 1100px) {
 
     .projects {
-        /* border: 2px solid red; */
         margin: 0;
         margin-top: -15px;
         padding: 0;
@@ -416,7 +382,6 @@ span {
     }
 
     .mid-menu {
-        /* border: 1px solid red; */
         margin: 0;
         padding: 0;
         display: flex;
@@ -434,7 +399,6 @@ span {
     }
 
     body {
-        /* border: .5px solid rgb(255, 0, 0); */
         display: flex;
         flex-direction: column;
         margin: 0;
@@ -442,7 +406,6 @@ span {
     }
 
     #nav-section {
-        /* border: .5px solid rgb(0, 13, 255); */
         margin: 0;
         width: fit-content;
         padding: 20px;
@@ -450,7 +413,6 @@ span {
     }
 
     .content-menu {
-        /* border: .5px solid rgb(255, 0, 0); */
         display: flex;
         flex-direction: row;
         height: fit-content;
@@ -461,12 +423,9 @@ span {
         flex-direction: row;
         padding-top: 12px;
         justify-content: left;
-        /* border: .5px solid rgb(0, 13, 255); */
-
     }
 
     #nav-menu {
-        /* border: .5px solid rgb(0, 13, 255); */
         display: flex;
         flex-direction: column;
     }
@@ -476,13 +435,11 @@ span {
     }
 
     .nav-link {
-        /* border: .5px solid rgb(0, 13, 255); */
         width: fit-content;
         flex-wrap: wrap;
     }
 
     #content-top {
-        /* border: .5px solid rgb(255, 0, 0); */
         display: flex;
         flex-direction: column;
         width: fit-content;
@@ -504,7 +461,6 @@ span {
     }
 
     .mix-pack {
-        /* border: 2px solid red; */
         margin: 0;
         padding: 0;
         display: flex;
@@ -520,7 +476,6 @@ span {
     }
 
     #visualizers {
-        /* border: 2px solid red; */
         flex-shrink: 0;
         margin: 0;
         padding: 0;
@@ -530,12 +485,10 @@ span {
     }
 
     .sticky-top {
-        /* border: 2px solid red; */
         display: inline-flex;
     }
 
     .mid-menu {
-        /* border: 2px solid red; */
         display: flex;
         flex-direction: row;
         margin-top: -30px;
@@ -543,7 +496,6 @@ span {
     }
 
     .projects {
-        /* border: 2px solid red; */
         margin: 0;
         padding: 0;
         display: flex;
@@ -552,7 +504,6 @@ span {
     }
 
     .title-container {
-        /* border: 2px solid red; */
         margin: 0;
         padding: 5px;
         font-size: 12px;
@@ -563,13 +514,11 @@ span {
 
     .proj-desc,
     span {
-        /* border: 2px solid red; */
         font-size: 12px;
         margin: 0;
     }
 
     #image-content {
-        /* border: .5px solid rgb(255, 0, 0); */
         display: flex;
         flex-direction: column;
         margin: 0;
@@ -577,14 +526,12 @@ span {
     }
 
     .desc {
-        /* border: 1px solid red; */
         font-size: 12px;
         line-height: 20x;
         margin-top: -30px;
     }
 
     .desc-mix {
-        /* border: 1px solid red; */
         font-size: 12px;
         line-height: 20x;
         margin-top: -30px;
@@ -592,14 +539,12 @@ span {
     }
 
     .vid-menu-two {
-        /* border: 1px solid red; */
         text-transform: uppercase;
         letter-spacing: .08rem;
         margin-left: 60px;
     }
 
     .arrow {
-        /* border: 1px solid red; */
         width: 13px;
         padding: 0;
         display: none;
