--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,20 @@ html {
     top: 0;
 }
 
+.logo-section {
+    margin: 0;
+    padding: 0;
+    height: fit-content;
+}
+
+.radio-icon {
+    margin: 0;
+    padding: 0;
+    width: 20px;
+    float: right;
+    color: #4DA62F;
+}
+
 .font-color {
     color: #4DA62F;
     font-family: Cousine;
@@ -153,13 +167,13 @@ html {
 
 .active {
     text-decoration: underline;
-    text-underline-offset: 2px;
+    text-underline-offset: 3px;
 }
 
 .vid-menu-active {
     font-size: 20px;
     text-decoration: underline;
-    text-underline-offset: 4px;
+    text-underline-offset: 2px;
 }
 
 .vid-menu-inactive {
@@ -184,8 +198,10 @@ a:hover {
 }
 
 .content-heading {
+    margin-top: 28px;
+    padding: 0;
     font-size: 12px;
-    line-height: 2.75rem;
+    /* line-height: 2.75rem; */
     letter-spacing: .1rem;
     text-transform: uppercase;
     text-underline-offset: 2px;
@@ -209,15 +225,35 @@ a:hover {
 }
 
 .mid-menu {
+    margin: 0;
+    padding: 0;
     display: flex;
+    gap: 50px;
     flex-direction: row;
 }
 
 .vid-menu-one,
 .vid-menu-two {
+    margin: 0;
+    padding: 0;
     text-transform: uppercase;
     letter-spacing: .08rem;
 }
+
+.featured-track {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    margin-top: 12px;
+}
+
+.music-icon {
+    width: 20px;
+    margin: 0;
+    padding: 0;
+}
+
 
 #visualizers {
     flex-shrink: 0;
@@ -225,7 +261,7 @@ a:hover {
     padding: 0;
     display: flex;
     flex-direction: column;
-    gap: 45px;
+    gap: 50px;
 }
 
 .projects {
@@ -233,48 +269,54 @@ a:hover {
     padding: 0;
     display: flex;
     flex-direction: row;
+    height: fit-content;
 }
 
 .proj-img {
-    flex-shrink: 0;
-    margin-left: -20px;
-    width: 390px;
-    height: 270px;
-    top: 0;
+    margin: 0;
+    padding: 0;
+    width: 490px;
+}
+
+.video-img {
+    margin: 0;
+    padding: 0;
 }
 
 .proj-title {
+    display: flex;
     color: #4DA62F;
-    font-size: 25px;
-    font-family: Dela Gothic One;
+    font-size: 20px;
+    font-family: Cousine;
+    font-display:initial;
+    letter-spacing: 2px;
     line-height: 32px;
     text-decoration-line: none;
     text-transform: uppercase;
     text-underline-offset: 3px;
-    margin-right: -10px;
 }
 
 .title-container {
     padding: 0;
-    margin-left: -20px;
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 2px;
 }
 
 .sub-desc {
     font-size: 12px;
-    padding-top: 6px;
 }
 
 .proj-desc {
     font-size: 12px;
-    margin-right: -30px;
+    margin-top: 10px;
 }
 
-span {
-    font-style: italic;
-    margin-left: -20px;
+.track-p {
+    font-size: 12px;
+    margin: 0;
+    padding-left: 0;
+    padding-top: 4px;
 }
 
 .landing {
@@ -286,7 +328,8 @@ span {
 }
 
 .landing-img {
-    width: 65%;
+    width: 50%;
+    mix-blend-mode:screen;
 }
 
 #mixes {
@@ -318,10 +361,11 @@ span {
 }
 
 .tube-watch {
+    margin: 0;
+    padding: 0;
     display: flex;
-    align-items: left;
+    justify-content: end;
     margin-top: 10px;
-    padding-left: 13px;
     text-decoration: underline;
 }
 
@@ -388,6 +432,14 @@ span {
         flex-direction: column;
         line-height: 40px;
         justify-content: center;
+    }
+
+    #visualizers {
+        flex-shrink: 0;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
     }
 }
 
