--- a/styles/style.css
+++ b/styles/style.css
@@ -477,7 +477,7 @@ a:hover {
     }
 
     #nav-menu {
-        border: 1px solid red;
+        /* border: 1px solid red; */
         display: flex;
         flex-direction: row;
     }
