--- a/styles/style.css
+++ b/styles/style.css
@@ -444,7 +444,7 @@ a:hover {
 }
 
 
-@media only screen and (max-width: 850px) {
+@media only screen and (min-width: 450px) and (max-width: 850px) {
     * {
         margin: 0;
         padding: 0;
