--- a/styles/style.css
+++ b/styles/style.css
@@ -451,6 +451,8 @@ a:hover {
     }
 
     body {
+        margin: 0;
+        padding: 0;
         display: flex;
         flex-direction: column;
         margin: 0;
