--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+@viewport {
+    width: device-width ;
+    zoom: 1.0 ;
+  }
+
 * {
     margin: 0;
     padding: 0 18px;
@@ -444,7 +449,7 @@ a:hover {
 }
 
 
-@media only screen and (min-width: 350px) and (max-width: 850px) {
+@media only screen and (max-width: 850px) {
     * {
         margin: 0;
         padding: 0;
@@ -461,7 +466,7 @@ a:hover {
 
     #nav-section {
         margin: 0;
-        width: fit-content;
+        width: 100vw;
         padding: 20px;
         position: relative;
     }
