--- a/styles/style.css
+++ b/styles/style.css
@@ -569,6 +569,7 @@ a:hover {
     .projects {
         margin: 0;
         padding: 0;
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
