--- a/styles/style.css
+++ b/styles/style.css
@@ -546,6 +546,7 @@ a:hover {
         display: flex;
         flex-direction: column;
         gap: 70px;
+        padding-bottom: 40px;
     }
 
     .mid-menu {
