--- a/styles/style.css
+++ b/styles/style.css
@@ -418,10 +418,15 @@ a:hover {
 
     .projects {
         margin: 0;
-        margin-top: -15px;
         padding: 0;
+        width: 100%;
         display: flex;
         flex-direction: column;
+        align-items: center;
+    }
+
+    .proj-title {
+        justify-content: center;
     }
 
     .mix-covers {
@@ -431,12 +436,11 @@ a:hover {
     }
 
     .mid-menu {
+        display: flex;
+        flex-direction: row;
         margin: 0;
         padding: 0;
-        display: flex;
-        flex-direction: column;
-        line-height: 40px;
-        justify-content: center;
+        
     }
 
     #visualizers {
@@ -445,6 +449,8 @@ a:hover {
         padding: 0;
         display: flex;
         flex-direction: column;
+        gap: 70px;
+        padding-bottom: 40px;
     }
 }
 
