--- a/styles/style.css
+++ b/styles/style.css
@@ -280,14 +280,14 @@ a:hover {
     padding: 0;
     display: flex;
     flex-direction: column;
-    gap: 80px;
+    gap: 35px;
 }
 
 .projects {
     margin: 0;
     padding: 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     height: fit-content;
     /* align-items: center;
     justify-content: center; */
@@ -297,18 +297,19 @@ a:hover {
 .proj-img {
     margin: 0;
     padding: 0;
-    width: 70%;
+    width: 370px;
 }
 
 .video-img {
     margin: 0;
     padding: 0;
+    object-fit: cover;
 }
 
 .proj-title {
     display: flex;
     color: #4DA62F;
-    font-size: 20px;
+    font-size: 17px;
     font-family: Cousine;
     font-display:initial;
     letter-spacing: 2px;
@@ -316,10 +317,13 @@ a:hover {
     text-transform: uppercase;
     margin: 3px 0 0 0;
     padding: 0;
+   display: flex;
+   text-align: left;
+
 }
 
 .title-container {
-    margin: 0 150px 0 150px;
+    margin: 0;
     display: flex;
     flex-direction: column;
     gap: 2px;
@@ -334,7 +338,8 @@ a:hover {
 }
 
 .sub-desc {
-    margin: 10px 0 0 0;
+    border: 1px solid rebeccapurple;
+    margin: 6px 0 0 0;
     padding: 0;
     font-size: 12px;
 }
