--- a/styles/style.css
+++ b/styles/style.css
@@ -521,15 +521,18 @@ a:hover {
     }
 
     .full-menu {
+        margin: 0;
+        padding: 0;
         display: flex;
         flex-direction: row;
     }
 
     #nav-menu {
-        /* border: 1px solid red; */
+        margin: 0;
+        padding: 0;
         display: flex;
         flex-direction: row;
-       justify-content: center;
+        justify-content: left;
     }
 
     .subheadings {
@@ -596,7 +599,7 @@ a:hover {
         display: flex;
         gap: 33px;
         flex-direction: row;
-        justify-content: center;
+        justify-content: right;
     }
 
     #content-top {
