--- a/styles/style.css
+++ b/styles/style.css
@@ -507,7 +507,7 @@ a:hover {
 
     #nav-section {
         margin: 0;
-        padding: 20px;
+        padding: 20px 20px 0 20px;
         width: fit-content;
         position: relative;
     }
@@ -515,7 +515,7 @@ a:hover {
     .content-menu {
         display: flex;
         flex-direction: row;
-        column-gap: 80px;
+        column-gap: 100px;
         justify-content: space-evenly;
         align-items: center;
     }
@@ -523,8 +523,6 @@ a:hover {
     .full-menu {
         margin: 0;
         padding: 0;
-        display: flex;
-        flex-direction: row;
     }
 
     #nav-menu {
@@ -532,7 +530,7 @@ a:hover {
         padding: 0;
         display: flex;
         flex-direction: row;
-        justify-content: left;
+        justify-content: center;
     }
 
     .subheadings {
@@ -599,7 +597,7 @@ a:hover {
         display: flex;
         gap: 33px;
         flex-direction: row;
-        justify-content: right;
+        justify-content: center;
     }
 
     #content-top {
