--- a/styles/style.css
+++ b/styles/style.css
@@ -584,11 +584,10 @@ a:hover {
     #visualizers {
         flex-shrink: 0;
         margin: 0;
-        padding: 0;
+        padding: 20px 0 40px 0;
         display: flex;
         flex-direction: column;
         gap: 70px;
-        padding-bottom: 40px;
     }
 
     .mid-menu {
