--- a/styles/style.css
+++ b/styles/style.css
@@ -130,6 +130,10 @@ html {
     flex-shrink: 0;
 }
 
+.active {
+    text-decoration: underline;
+    text-underline-offset: 3px;
+}
 
 /* Landing Image */
 
@@ -235,6 +239,13 @@ html {
     text-align: left;
 }
 
+.proj-desc {
+    font-size: 12px;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+}
+
 .tube-watch {
     margin: 10px 0 0 0;
     padding: 0;
@@ -304,15 +315,6 @@ html {
     display: none;
 }
 
-.subheadings {
-    margin: 0;
-    padding: 0;
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: .07rem;
-    display: inline-block;
-}
-
 
 .desc,
 .desc-mix {
@@ -320,11 +322,6 @@ html {
     line-height: 20px;
 }
 
-
-.active {
-    text-decoration: underline;
-    text-underline-offset: 3px;
-}
 
 .vid-menu-active {
     font-size: 20px;
@@ -343,20 +340,6 @@ a:hover {
     text-underline-offset: 2px;
 }
 
-.content-heading {
-    margin-top: 28px;
-    padding: 0;
-    font-size: 12px;
-    /* line-height: 2.75rem; */
-    letter-spacing: .1rem;
-    text-transform: uppercase;
-    text-underline-offset: 2px;
-}
-
-.sub-menu {
-    display: flex;
-    gap: 15px;
-}
 
 .vid-menu-one,
 .vid-menu-two {
@@ -366,53 +349,7 @@ a:hover {
     letter-spacing: .08rem;
 }
 
-.proj-desc {
-    font-size: 12px;
-    margin: 0;
-    padding: 0;
-    text-align: left;
-}
 
-#mixes {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-
-.mix-covers {
-    display: inline-block;
-    max-width: 266px;
-    padding: 8px 8px;
-}
-
-.mix-pack {
-    margin: 0;
-    padding: 0;
-    max-width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: left;
-    justify-content: center;
-}
-
-.unavailable {
-    opacity: 60%;
-}
-
-
-/* #nav-icon.active .bar:nth-child(2) {
-    opacity: 0;
-}
-  
-  #nav-icon.active .bar:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
-}
-  
-#nav-icon.active .bar:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
-} */
 
 @media only screen and (max-width: 1400px) {
 
@@ -431,16 +368,6 @@ a:hover {
     }
 }
 
-
-/* @media screen and (min-width: 1200px) {
-    .proj-img {
-        width: 500px;
-    }
-
-    .content-dashed-line {
-        width: 97%;
-    }
-} */
 
 @media only screen and (max-width: 1100px) {
 
@@ -482,6 +409,8 @@ a:hover {
     }
 }
 
+
+/* For mobile browsing */
 
 @media only screen and (max-width: 850px) {
     * {
